# local-lore

./: .gitignore  .mcp.json  Dockerfile  LICENSE  LOCALLORE_BUILD_SPEC.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  compose.yaml  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  release.yml
commands/: remember.md  setup.md
evals/: remember.yaml  retrieval.yaml
evals/fixtures/keyword-sessions/alpha/: history.jsonl
evals/fixtures/keyword-sessions/beta/: history.jsonl
evals/fixtures/keyword-sessions/migrations/: history.jsonl
hooks/: hooks.json
scripts/: build.sh  configure.sh  doctor.sh  index.sh  mcp.sh  onboarding.sh  setup.sh
skills/remember/: SKILL.md
src/locallore/: __init__.py  __main__.py  config.py  db.py  discovery.py  doctor.py  embeddings.py  importer.py  locking.py  mcp_server.py  models.py  parser.py  preferences.py  schema.sql  search.py  status.py
tests/: test_doctor.py  test_evals.py  test_importer.py  test_index_lock.py  test_keyword_memory.py  test_message_parsing.py  test_milestone1.py  test_parser.py  test_performance.py  test_plugin_runtime.py  test_preferences.py  test_retrieval_evals.py  test_semantic_memory.py  test_session_ingestion.py
tests/fixtures/sessions/project-a/: session-1.jsonl
