[project]
name = "locallore"
version = "0.1.0"
description = "Offline local memory for Claude Code sessions"
requires-python = ">=3.12"
dependencies = [
  "mcp==1.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/locallore"]
