[project]
name = "locallore"
version = "0.1.0"
description = "Offline local memory for Claude Code sessions"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
  "fastembed==0.7.4",
  "mcp==1.26.0",
  "numpy==2.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pyyaml==6.0.3",
  "pytest==8.4.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/locallore"]
